connected react frontend to rcheck